fix: update card styles for improved legibility and add shadow effect; adjust header position to absolute; ensure slide component has proper z-index

--- a/app/styles/components/_card.scss
+++ b/app/styles/components/_card.scss
@@ -85,7 +85,8 @@
     border-radius: 12px;
     line-height: 16px;
     padding: 4px 10px;
-    border: 1px solid $color-gray-100;
+    text-rendering: optimizeLegibility;
+    box-shadow: 0px 0px 5px -1px $color-black-100;
   }
 
   &__content {
