--- a/app/styles/components/_slide.scss
+++ b/app/styles/components/_slide.scss
@@ -9,6 +9,7 @@
   height: 400px;
   color: $color-white;
   text-align: center;
+  z-index: 0;
 
   @include flex(center, center);
 
